--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff4081</color>
     <color name="background_color">#009688</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
@@ -12,5 +12,8 @@
     <color name="sadasd">#f7f7f7</color>
     <color name="aaaaa">#bbbaba</color>
     <color name="toast">#e23f3f3f</color>
+    <color name="cam">#00aeff</color>
+    <color name="RED">#ff4545</color>
+    <color name="GREEN">#2dae5f</color>
 
 </resources>
