--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_orange_dark"
+    android:background="@color/cam"
     android:orientation="vertical"
     android:padding="20dp"
     android:visibility="visible"
@@ -116,7 +116,7 @@
             android:layout_marginTop="3dp"
             android:background="@drawable/loginbutton_selector"
             android:text="@string/login"
-            android:textColor="@android:color/holo_orange_dark"
+            android:textColor="@color/cam"
             android:textSize="17sp"
             android:textStyle="bold" />
     </LinearLayout>
