--- a/app/src/main/res/layout/activity_main_information_order.xml
+++ b/app/src/main/res/layout/activity_main_information_order.xml
@@ -16,7 +16,7 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_orange_dark"
+            android:background="@color/cam"
             android:padding="10dp"
             android:text="Chi tiết đơn hàng:"
             android:textColor="#fff"
@@ -26,7 +26,7 @@
             android:id="@+id/tvifMaOrder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/holo_orange_dark"
+            android:background="@color/cam"
             android:gravity="center_vertical"
             android:text="02031929"
             android:textColor="@color/white"
