--- a/app/src/main/res/layout/activity_main_list_excel.xml
+++ b/app/src/main/res/layout/activity_main_list_excel.xml
@@ -25,7 +25,7 @@ tools:context="com.example.windows10gamer.connsql.Main_List_Excel">
             android:id="@+id/svSearchItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_orange_dark"
+            android:background="@color/cam"
             android:drawableLeft="@drawable/ic_search_black_24dp"
             android:hint="Tìm kiếm sản phẩm"
             android:paddingBottom="10dp"
@@ -42,7 +42,7 @@ tools:context="com.example.windows10gamer.connsql.Main_List_Excel">
             android:layout_margin="5dp"
             android:text="Danh sách sản phẩm"
             android:textAlignment="center"
-            android:textColor="@android:color/holo_orange_dark"
+            android:textColor="@color/cam"
             android:textSize="20dp" />
 
         <ListView
@@ -51,7 +51,6 @@ tools:context="com.example.windows10gamer.connsql.Main_List_Excel">
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </android.support.v7.widget.LinearLayoutCompat>
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -59,6 +58,7 @@ tools:context="com.example.windows10gamer.connsql.Main_List_Excel">
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/stat_sys_download"
-        app:backgroundTint="@android:color/holo_orange_dark" />
+        app:backgroundTint="@color/cam" />
+
 
 </android.support.design.widget.CoordinatorLayout>
