--- a/app/src/main/res/layout/activity_main_order.xml
+++ b/app/src/main/res/layout/activity_main_order.xml
@@ -27,7 +27,7 @@
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_orange_dark"
+            android:background="@color/cam"
             android:padding="10dp"
             android:text="Danh sách đơn hàng"
             android:textColor="#fff"
@@ -37,12 +37,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:paddingTop="5dp"
             android:text="Lọc đơn hàng bằng cách nhập vào ngày bắt đầu, ngày kết thúc và ca làm:"
             android:textAlignment="center"
             android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/button_selectorcolor"
+            android:paddingLeft="10dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -63,7 +72,7 @@
                 android:inputType="textPersonName"
                 android:padding="5dp"
                 android:textColor="@color/zxing_custom_viewfinder_laser"
-                android:textColorLink="@android:color/holo_orange_dark" />
+                android:textColorLink="@color/cam" />
 
             <EditText
                 android:id="@+id/edEndOrder"
@@ -77,7 +86,7 @@
                 android:inputType="textPersonName"
                 android:padding="5dp"
                 android:textColor="@color/zxing_custom_viewfinder_laser"
-                android:textColorLink="@android:color/holo_orange_dark" />
+                android:textColorLink="@color/cam" />
 
         </LinearLayout>
 
@@ -96,7 +105,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:text="Ca sáng"
-                android:textColorLink="@android:color/holo_orange_dark" />
+                android:textColorLink="@color/cam" />
 
             <CheckBox
                 android:id="@+id/cbCachieuOrder"
@@ -104,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:text="Ca chiều"
-                android:textColorLink="@android:color/holo_orange_dark" />
+                android:textColorLink="@color/cam" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -124,7 +133,7 @@
                     android:drawableLeft="@drawable/ic_search_black_24dp"
                     android:onClick="scanSanpham"
                     android:padding="5dp"
-                    android:text="Search"
+                    android:text="Tìm kiếm"
                     android:textColor="#fff"
                     android:textSize="10sp" />
             </LinearLayout>
@@ -142,13 +151,13 @@
 
     </LinearLayout>
 
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/fab"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|end"-->
-        <!--android:layout_margin="@dimen/fab_margin"-->
-        <!--android:src="@android:drawable/stat_sys_download"-->
-        <!--app:backgroundTint="@android:color/holo_orange_dark" />-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabReportOrder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:src="@drawable/report_icon"
+        app:backgroundTint="@android:color/holo_red_light" />
 
-    </android.support.design.widget.CoordinatorLayout>
+</android.support.design.widget.CoordinatorLayout>
