--- a/app/src/main/res/layout/activity_main_report_sales.xml
+++ b/app/src/main/res/layout/activity_main_report_sales.xml
@@ -5,22 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.windows10gamer.connsql.Main_List_Kiemkho">
+    tools:context="com.example.windows10gamer.connsql.Main_Report_Sales">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/cam"
         android:padding="10dp"
-        android:text="Danh sách kiểm kho"
+        android:text="Báo cáo danh thu"
         android:textColor="#fff"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:textSize="24sp" />
 
-    <ListView
-        android:id="@+id/lvListKiemkho"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:text="Tổng hợp báo cáo doanh thu"
+        android:textAlignment="center" />
+
+    <TableLayout
+        android:id="@+id/tbReport"
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    </TableLayout>
 </LinearLayout>
