--- a/app/src/main/res/layout/activity_main_sales.xml
+++ b/app/src/main/res/layout/activity_main_sales.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/holo_orange_dark"
+                android:background="@color/cam"
                 android:padding="10dp"
                 android:text="Form Bán Hàng"
                 android:textColor="#fff"
@@ -150,7 +150,7 @@
                         android:background="@android:color/holo_orange_light"
                         android:drawableLeft="@drawable/ic_search_black_24dp"
                         android:gravity="center_vertical"
-                        android:onClick="scanSanpham"
+                        android:onClick="scanNhanvien"
                         android:padding="5dp"
                         android:text="Scan"
                         android:textColor="#fff"
@@ -193,7 +193,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Tổng giá trị đơn hàng:"
-                        android:textColor="@android:color/holo_orange_dark"
+                        android:textColor="@color/cam"
                         android:textSize="18sp" />
 
                 </LinearLayout>
@@ -245,7 +245,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Ghi chú:"
-                            android:textColor="@android:color/holo_orange_dark"
+                            android:textColor="@color/cam"
                             android:textSize="18sp" />
 
                     </LinearLayout>
@@ -261,7 +261,7 @@
                             android:layout_width="247dp"
                             android:layout_height="wrap_content"
                             android:inputType="text"
-                            android:textColorLink="@android:color/holo_orange_dark"
+                            android:textColorLink="@color/cam"
                             android:textStyle="italic"
                             android:windowSoftInputMode="stateHidden" />
 
@@ -278,57 +278,57 @@
                 android:background="@color/zxing_custom_viewfinder_mask" />
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:gravity="right"
-                android:orientation="horizontal"
-                android:weightSum="10">
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="10dp"-->
+                <!--android:layout_marginRight="10dp"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:gravity="right"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:weightSum="10">-->
 
-                <LinearLayout
-                    android:layout_width="287dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:orientation="horizontal">
+                <!--<LinearLayout-->
+                    <!--android:layout_width="287dp"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_weight="2"-->
+                    <!--android:orientation="horizontal">-->
 
-                    <TextView
-                        android:id="@+id/sas"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Quét mã nhân viên: "
-                        android:textSize="18sp" />
+                    <!--<TextView-->
+                        <!--android:id="@+id/sas"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="Quét mã nhân viên: "-->
+                        <!--android:textSize="18sp" />-->
 
-                </LinearLayout>
+                <!--</LinearLayout>-->
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="8"
-                    android:gravity="right"
-                    android:orientation="horizontal">
+                <!--<LinearLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_weight="8"-->
+                    <!--android:gravity="right"-->
+                    <!--android:orientation="horizontal">-->
 
-                    <Button
-                        android:id="@+id/btnScanNhanvien"
-                        android:layout_width="65dp"
-                        android:layout_height="37dp"
-                        android:layout_below="@+id/tv_blog_url"
-                        android:layout_centerHorizontal="true"
-                        android:layout_margin="0dp"
-                        android:background="@android:color/holo_orange_light"
-                        android:drawableLeft="@drawable/ic_search_black_24dp"
-                        android:gravity="center_vertical"
-                        android:onClick="scanNhanvien"
-                        android:padding="5dp"
-                        android:text="Scan"
-                        android:textColor="#fff"
-                        android:textSize="10sp" />
+                    <!--<Button-->
+                        <!--android:id="@+id/btnScanNhanvien"-->
+                        <!--android:layout_width="65dp"-->
+                        <!--android:layout_height="37dp"-->
+                        <!--android:layout_below="@+id/tv_blog_url"-->
+                        <!--android:layout_centerHorizontal="true"-->
+                        <!--android:layout_margin="0dp"-->
+                        <!--android:background="@android:color/holo_orange_light"-->
+                        <!--android:drawableLeft="@drawable/ic_search_black_24dp"-->
+                        <!--android:gravity="center_vertical"-->
+                        <!--android:onClick="scanNhanvien"-->
+                        <!--android:padding="5dp"-->
+                        <!--android:text="Scan"-->
+                        <!--android:textColor="#fff"-->
+                        <!--android:textSize="10sp" />-->
 
-                </LinearLayout>
+                <!--</LinearLayout>-->
 
-            </LinearLayout>
+            <!--</LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -418,7 +418,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/kh_ch_h_ng"
-                        android:textColor="@android:color/holo_orange_dark"
+                        android:textColor="@color/cam"
                         android:textSize="18sp" />
 
                 </LinearLayout>
@@ -436,7 +436,7 @@
                         android:layout_height="wrap_content"
                         android:hint="Tên khách hàng"
                         android:inputType="textPersonName"
-                        android:textColorLink="@android:color/holo_orange_dark"
+                        android:textColorLink="@color/cam"
                         android:textStyle="italic"
                         android:windowSoftInputMode="stateHidden" />
 
@@ -462,7 +462,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Điện thoại:"
-                        android:textColor="@android:color/holo_orange_dark"
+                        android:textColor="@color/cam"
                         android:textSize="18sp" />
 
                 </LinearLayout>
@@ -479,7 +479,7 @@
                         android:layout_height="wrap_content"
                         android:hint="Số điện thoại"
                         android:inputType="phone"
-                        android:textColorLink="@android:color/holo_orange_dark"
+                        android:textColorLink="@color/cam"
                         android:textStyle="italic" />
 
                 </LinearLayout>
@@ -512,7 +512,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Ghi chú:"
-                            android:textColor="@android:color/holo_orange_dark"
+                            android:textColor="@color/cam"
                             android:textSize="18sp" />
 
                     </LinearLayout>
@@ -528,7 +528,7 @@
                             android:layout_width="247dp"
                             android:layout_height="wrap_content"
                             android:inputType="text"
-                            android:textColorLink="@android:color/holo_orange_dark"
+                            android:textColorLink="@color/cam"
                             android:textStyle="italic" />
 
                     </LinearLayout>
@@ -564,7 +564,7 @@
                     android:layout_marginRight="50dp"
                     android:layout_marginTop="50dp"
                     android:layout_weight="1"
-                    android:background="@android:color/holo_orange_dark"
+                    android:background="@color/cam"
                     android:text="Xác nhận"
                     android:textColor="#fff"
                     android:textSize="14sp" />
