--- a/app/src/main/res/layout/adapter_list_excel.xml
+++ b/app/src/main/res/layout/adapter_list_excel.xml
@@ -10,9 +10,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:orientation="vertical"
-        android:padding="5dp">
+        android:padding="5dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,17 +25,12 @@
             android:orientation="horizontal"
             android:weightSum="10">
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="37dp"
-                android:layout_height="32dp"
-                fresco:srcCompat="@android:drawable/btn_star_big_on" />
-
             <TextView
                 android:id="@+id/textViewten"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:drawableLeft="@android:drawable/btn_star_big_on"
                 android:paddingLeft="10dp"
                 android:paddingRight="20dp"
                 android:textAppearance="?android:textAppearanceLarge"
@@ -98,7 +95,6 @@
                 android:layout_weight="1"
                 android:background="@color/âs"
                 android:paddingLeft="10dp"
-                android:text="ádasd"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@android:color/holo_red_dark"
                 android:textSize="14sp"
